overflow problem fixed, I will call it Ver 1.1.0

--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -119,6 +119,10 @@ img {
   justify-content: center;
   width: 100%;
 }
+
+.hidden {
+  display: none;
+}
 /* End: Content in the panel*/
 
 .content {
